2000-12-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* async.c (SCM_ASYNCP):  Use SCM_TYP16 instead of SCM_GCTYP16.

	* eval.c (scm_m_vref, scm_m_vset, scm_m_define, SCM_CEVAL,
	SCM_APPLY, scm_copy_tree):  Remove commented code.

	(SCM_CEVAL, SCM_APPLY):  Remove #ifdef CCLO conditionals.  Without
	CCLO being defined, guile would not compile at all anyway.

	* gc.h (SCM_GC8MARKP, SCM_SETGC8MARK, SCM_CLRGC8MARK, SCM_GCTYP16,
	SCM_GCCDR):  Deprecated.

	* gdbint.c (unmark_port, remark_port, gdb_read), procs.c
	(scm_mark_subr_table):  Use SCM_(SET|CLR)?GCMARK(P)? instead of
	SCM_(SET|CLR)?GC8MARK(P)?.

	* gh_data.c (gh_scm2char):  Remove bogus ';'.

	* tags.h:  Removed comment about GCTYP16 macro.

	* weaks.c (scm_mark_weak_vector_spines):  Use SCM_CDR instead of
	SCM_GCCDR.

2000-12-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* print.c (scm_iprin1):  Use scm_tc3_* codes instead of hardcoded
	values.  Added comment about tc3 codes that may appear in
	immediates.  Got rid of one goto command.

2000-12-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* dynl.c (sysdep_dynl_link):  Improved error reporting.

	* guardians.c:  Changed the representation from a compiled closure
	to an applicable smob.

	(guard1, CCLO_G):  Removed.

	(guard, g_mark, g_print, scm_tc16_guardian, scm_guardian_gc_init,
	scm_guardian_zombify):  Renamed to guardian_apply, guardian_mark,
	guardian_print, tc16_guardian, guardian_gc_init and
	guardian_zombify, respectively.

	(guardian_free):  Added, fixes a memory leak.

	(guardian_print):  Don't use sprintf hack.

	(guardian_apply, scm_guard, scm_get_one_zombie,
	scm_make_guardian):  Don't use a compiled closure.

	(guardian_zombify):  Prefer !SCM_NULLP over SCM_NIMP.  No need to
	use SCM_GCCDR any more.  Simplified loop condition.

	(scm_init_guardian):  Don't use scm_make_smob_type_mfpe for smob
	initialization.  Initialize applicable smob.

2000-12-04  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* chars.c (scm_char_eq_p):  Minor cleanup/optimization.
